Few minor fixes